--- a/css/style.css
+++ b/css/style.css
@@ -30,5 +30,144 @@ body {
 
 nav a {
     text-decoration: none;
-    color: ;
+    color: #222;
+    padding: 0 15px;
+}
+
+nav a:hover {
+    color: #759b35;
+}
+
+.hero {
+    position: relative;
+    background: url() center/cover no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-overlay {
+    background: rgba(0, 0, 0, 0.5);
+    color: #222;
+    text-align: center;
+    padding: 2rem;
+    border-radius: 10px;
+}
+
+.hero h2 {
+    font-family: 'Playfair Display', serif;
+    font-size: 2.5rem;
+}
+
+.btn-primary {
+    display: inline-block;
+    background: black;
+    color: #fff;
+    padding: 0.8rem 1.8rem;
+    border-radius: 25px;
+    text-decoration: none;
+}
+
+.btn-primary:hover {
+    background: #fff;
+}
+
+/* Featured Products */
+.featured {
+    text-align: center;
+    padding: 3rem 1rem;
+}
+
+.featured h2 {
+  font-family: 'Playfair Display', serif;
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  color: #222;
+}
+
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem;
+  width: 90%;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.product-card {
+  border: 1px solid #eee;
+  border-radius: 12px;
+  padding: 1rem;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.product-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.product-card img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.btn-add {
+  background: #c47ea0;
+  color: white;
+  border: none;
+  padding: 0.6rem 1rem;
+  border-radius: 20px;
+  cursor: pointer;
+  margin-top: 0.8rem;
+}
+
+.btn-add:hover {
+  background: #b46b8f;
+}
+
+footer {
+    padding: 30px 20px;
+    background: gray;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.footer-box {
+    flex: 1;
+    width: 200px;
+    padding: 0 20px;
+    text-align: center;
+}
+
+.border {
+    border-right: 1px solid #222;
+}
+
+.footer-box a {
+    text-decoration: none;
+    color: #222;
+}
+
+.footer-box a:hover{
+    color: #759b35;
+}
+
+.footer-end {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+}
+
+.footer-end a {
+    text-decoration: none;
+    color: #222;
+}
+
+.footer-end a:hover {
+    color: #759b35;
 }
