Adjusted logo in nva on all pages for image logo

--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,7 @@ body {
 }
 
 .logo {
-    font-family: 'Playfair Display', serif;
-    font-size: 1.8 rem;
-    font-weight: 700;
-    color: #222;
+    width: 100px;
 }
 
 nav a {
