--- a/css/style.css
+++ b/css/style.css
@@ -76,13 +76,12 @@ nav a:hover {
 }
 
 .hero h2 {
-    font-family: 'Playfair Display', serif;
     font-size: 2.5rem;
 }
 
 .btn-primary {
     display: inline-block;
-    background: black;
+    background: #759b35;
     color: #fff;
     padding: 0.8rem 1.8rem;
     border-radius: 25px;
@@ -90,7 +89,7 @@ nav a:hover {
 }
 
 .btn-primary:hover {
-    background: #fff;
+    background: #3c742e;
 }
 
 /* Featured Products */
@@ -100,7 +99,6 @@ nav a:hover {
 }
 
 .featured h2 {
-  font-family: 'Playfair Display', serif;
   font-size: 2rem;
   margin-bottom: 2rem;
   color: #222;
@@ -418,6 +416,33 @@ footer {
 
 .cart-total button.btn-primary {
   margin-top: 0.8rem;
+}
+
+.checkout {
+  justify-items: center;
+}
+
+.checkout .container h2 {
+  color: #222;
+  font-size: 40px;
+}
+
+.checkout .container form {
+  justify-self: center;
+}
+
+.checkout .container form input {
+  margin-bottom: 10px;
+}
+
+.checkout .container h3, .checkout .container p {
+  color: #222;
+  justify-self: center;
+}
+
+.checkout .container form button {
+  margin-left: 18px;
+  margin-bottom: 20px;
 }
 
 .account-page {
