--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ nav a:hover {
     justify-content: center;
     align-items: center;
     height: 300px;
+    padding-bottom: 100px;
 }
 
 .hero img {
