--- a/css/style.css
+++ b/css/style.css
@@ -302,37 +302,17 @@ footer {
   margin-bottom: 1rem;
 }
 
-.thumbnails {
-  display: flex;
-  gap: 0.5rem;
-}
-
-.thumbnails img {
-  width: 70px;
-  height: 70px;
-  object-fit: cover;
-  cursor: pointer;
-  border-radius: 8px;
-  border: 2px solid transparent;
-  transition: border 0.3s;
-}
-
-.thumbnails img:hover {
-  border: 2px solid #c47ea0;
-}
-
 .product-info {
   flex: 1;
   min-width: 280px;
 }
 
 .product-info h2 {
-  font-family: 'Playfair Display', serif;
   margin-bottom: 1rem;
 }
 
 .price {
-  color: #c47ea0;
+  color: #759b35;
   font-weight: 700;
   font-size: 1.2rem;
   margin-bottom: 1rem;
@@ -361,10 +341,13 @@ footer {
 
 .suggested {
   margin-top: 3rem;
+  padding-bottom: 30px;
 }
 
 .suggested h3 {
   margin-bottom: 1.5rem;
+  padding-left: 20px;
+  font-size: 1.5rem;
 }
 
 .suggested .product-grid {
