--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ nav a:hover {
 
 .hero {
     position: relative;
-    background: url() center/cover no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -624,7 +623,30 @@ footer {
   color: #e74c3c;
 }
 
+.terms-hero, .shipping-hero {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+}
+
+.terms-hero img, .shipping-hero img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.terms-overlay, .shipping-overlay {
+  color: #3c742e;
+  text-align: center;
+  position: absolute;
+  font-size: 40px;
+}
+
 .terms, .shipping {
   padding: 30px 30px;
 }
+
+
 
